--- a/transformer_report.tex
+++ b/transformer_report.tex
@@ -447,7 +447,7 @@ A Matlab model is developed to estimate the transformer models and calculate cop
 
 \begin{figure}[]
   \centering
-    \includegraphics[]{design_method}
+    \includegraphics[scale=0.4]{design_method}
   \caption{Design methodology to estimate transformer parameters and losses.}
   \label{design_method}
 \end{figure}
