--- a/transformer_report.tex
+++ b/transformer_report.tex
@@ -73,7 +73,7 @@ Work Package 4} % Subtitle
 %\renewcommand{\abstractname}{Summary} % Uncomment to change the name of the abstract to something else
 
 \begin{abstract}
-This report presents the material options for the core of the medium frequency transformer that is being investigated within the Work Package 4 of the ``Next Generation HVDC Network for the OffshoreRenewable Energy Indusrty'' project. 
+This report presents the material options for the core of the medium frequency transformer that is being investigated within the Work Package 4 of the ``Next Generation HVDC Network for the   Energy Industry'' project. 
 \end{abstract}
 
 \hspace*{3,6mm}\textit{Keywords:} medium frequency transformer, HVDC transmission, core losses, HV transformer % Keywords
@@ -92,7 +92,7 @@ A literature review is presented by Robert Fox within WP 2, in which different m
 Increasing frequency of a transformer reduces its volume and cost. In \cite{Prasai2007}, it is stated that the weight and size of a 3 MW 1.2 kHz transformer is less than 8\% of an equivalent 50 Hz line transformer. In Fig.~\ref{transformer-vols}, volume variation with operating frequency for a 1 MW transformer is presented.
 
 However, as the frequency is increased, skin effect, proximity effect, hysteresis losses and dielectric losses are significantly increased. Furthermore, the reduction in size usually implies same power loss in much smaller area, which demands forced cooling.
-Important design factors in conventional line transformes and high frequency transformers are tabulated in Table~\ref{important}.
+Important design factors in conventional line transformers and high frequency transformers are tabulated in Table~\ref{important}.
 Challenges of medium-high frequency transformers can be listed as 
  \cite{Villar2010}:
 
@@ -265,7 +265,7 @@ Silicon Steel & Arnon 7 & 1.53 T & 1.6 kW/kg & Arnold\\
 \hline
 \end{tabular} 
 \end{center}
-\caption{Core materials and manufacturers for high-frequency transmormers (specific losses at B = 1 T, f = 20 kHz) \cite{Ortiz2010}.}
+\caption{Core materials and manufacturers for high-frequency transformers (specific losses at B = 1 T, f = 20 kHz) \cite{Ortiz2010}.}
 \label{core-loss-table}
 \end{table}
 
